[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Choose_level.gd" type="Script" id=1]
[ext_resource path="res://main_theme.tres" type="Theme" id=2]

[node name="Choose_level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -32.0
margin_right = 69.0
margin_bottom = -10.0
text = "Назад"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 430.0
color = Color( 0.596078, 0.564706, 0.564706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level1" type="Button" parent="buttons"]
margin_left = 14.0
margin_top = 14.0
margin_right = 64.0
margin_bottom = 64.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level2" type="Button" parent="buttons"]
margin_left = 78.0
margin_top = 14.0
margin_right = 128.0
margin_bottom = 64.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level3" type="Button" parent="buttons"]
margin_left = 142.0
margin_top = 14.0
margin_right = 192.0
margin_bottom = 64.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level4" type="Button" parent="buttons"]
margin_left = 206.0
margin_top = 14.0
margin_right = 256.0
margin_bottom = 64.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level5" type="Button" parent="buttons"]
margin_left = 270.0
margin_top = 14.0
margin_right = 320.0
margin_bottom = 64.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level6" type="Button" parent="buttons"]
margin_left = 334.0
margin_top = 14.0
margin_right = 384.0
margin_bottom = 64.0
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level7" type="Button" parent="buttons"]
margin_left = 398.0
margin_top = 14.0
margin_right = 448.0
margin_bottom = 64.0
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="buttons/level1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="buttons/level2" to="." method="_on_level2_pressed"]
[connection signal="pressed" from="buttons/level3" to="." method="_on_level3_pressed"]
[connection signal="pressed" from="buttons/level4" to="." method="_on_level4_pressed"]
[connection signal="pressed" from="buttons/level5" to="." method="_on_level5_pressed"]
[connection signal="pressed" from="buttons/level6" to="." method="_on_level6_pressed"]
[connection signal="pressed" from="buttons/level7" to="." method="_on_level7_pressed"]
